# rm_vms

./: Dockerfile  Makefile
cpp_engine/: CMakeLists.txt  flow.chart.md  main.cpp
cpp_engine/log/: Log.cpp  Log.h
cpp_engine/memory/: SharedMemory.h  SharedMemoryLinux.cpp
cpp_engine/queue/: SafeQueue.cpp  SafeQueue.h
cpp_engine/storage/: Recording.cpp  Recording.h  SegmentRecorder.cpp  SegmentRecorder.h  StorePath.cpp  StorePath.h
cpp_engine/utils/: Command.cpp  Command.h  Memory.cpp  Memory.h  Time.cpp  Time.h
cpp_engine/vi/: AVDictionary.cpp  AVDictionary.h  VideoIngestion.cpp  VideoIngestion.h
nvr_core/: config.go  go.mod  go.sum  main.go
nvr_core/apiserver/: base.go  calendar.handler.go  camera.discovery.go  camera.go  debug.go  export.master.key.go  health.go  health.metrics.go  live.handler.go  login.go  playback.handler.go  playback.ts.handler.go  playlist.handler.go  playlist.ts.handler.go  search.go  server.go  stream.go  timeline.go  user.permission.handler.go
nvr_core/apiserver/dto/: auth.go  calendar.go  camera.go  search.go  segment.item.go  system.go  user.go
nvr_core/apiserver/middleware/: cors.go
nvr_core/apiserver/webserver/: server.handler.go
nvr_core/cert/: cert.go
nvr_core/db/: prune.sql  sqlite.go  table.sql
nvr_core/db/ingest/: batcher.go
nvr_core/db/models/: camera.go  models.go  permission.go  segment.go  users.go
nvr_core/db/repository/: camera.go  permission.go  repository.go  segment.bulk.go  segment.go  segment.sanity.go  segment.search.go  sql.errors.go  user.go
nvr_core/logger/: buffer.go  context.handler.go  logger.go  provider.go
nvr_core/onvif/: camera.go  fetch.onvif.go
nvr_core/onvif/discovery/: parser.go  payload.go  scanner.go  subnet.go  sweep.go  verifier.go
nvr_core/process/: camera.go  logger.go  manager.go  reader.go  shm.go  startup.go  worker.go
nvr_core/security/: crypto.go  hash.go  master.key.go
nvr_core/service/: auth.go  camera.manage.go  ingest.go  playback.go  playlist.go  services.base.go  services.go  system.go  timeline.go  user.manage.go
nvr_core/shm/: frame.meta.go  metrics.go  shm.go  shm.reader.go
nvr_core/stream/: codec.go  handler.go  hub.go  packet.go
nvr_core/transmux/: ts.muxer.go
nvr_core/utils/: config.go  copy.go  crypto.go  debug.mutex.go  shutdown.go  string.go
nvr_core/utils/m3u8/: builder.go
nvr_core/webserver/: config.handler.go  server.go
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: config.js  main.js
web/src/api/: base.js  cameras.js  index.js  shm.metrics.js  timeline.js
web/src/assets/: main.css
web/src/assets/scss/: animation.scss  loading.scss  main.scss
web/src/components/: CameraCard.vue  CameraList.vue  CameraStatus.vue  CameraStream.vue  Loader.vue  Player.vue  SHMMetrics.vue  TheWelcome.vue  timeline.vue
web/src/components/icons/: IconCamera.vue  IconServer.vue
web/src/data/: timeline.js
web/src/models/: busy.loader.js
web/src/router/: index.js
web/src/utils/: define.js  log.js  time.js
web/src/views/: DashboardView.vue  HomeView.vue  Nav.vue  StreamView.vue
